--- a/final-report/discussion.tex
+++ b/final-report/discussion.tex
@@ -1,23 +1,32 @@
 \section{Discussion}
 \label{sec:discuss}
 
-A large component of \emph{\proj} is the use of virtualization to achieve our security requirements.  Unfortunately, the ARM architecture is not directly virtualizable as there are privileged instructions which when executed by the guest operating system, do not trap to the host kernel. There are many existing techniques like dynamic binary translation, trap-and-emulate using hardware extensions, translate to trap, and paravirtualization which have been used in existing virtualization solutions for x86. We discuss some of these solutions below and why we believe containers are more suitable for smartphones.
+A large component of \emph{\proj} is the use of virtualization to achieve our security requirements.  Unfortunately, the ARM architecture is not directly virtualizable as there are privileged instructions which when executed by the guest operating system, do not trap to the host kernel. There are many existing techniques like dynamic binary translation, trap-and-emulate using hardware extensions, translate to trap, and paravirtualization which have been used in existing virtualization solutions. We discuss some of these solutions below and why we believe containers are more suitable for smartphones.
+
+
+\begin{figure*}[!t]
+\centering
+\includegraphics[width=2.0\columnwidth]{lmbench-files}
+\caption{Normalized results from File System create/delete benchmarks in LMbench}
+\label{fig:lmbench-files}
+\end{figure*}
 
 \subsection{QEMU on ARM}
-QEMU \cite{qemu} is one of the more recent, popular and open source virtual machine monitors that can be used to run operating systems built for different architectures to run on different machines. QEMU relies on dynamic binary translation and has been ported to run on multiple platforms like ARM, PowerPC, i386 etc. Our first implementation used QEMU and attempts to address the initial design goal of evaluating the overhead of dynamic binary translation on a smartphone running an ARM processor. However, we found that the overhead due to dynamic binary translation is quite large without hardware assistance and explore other solutions for providing isolation. We present detailed results from our experiments in \ref{sec:eval}.
+QEMU \cite{qemu} is one of the more recent, popular and open source virtual machine monitors that can be used to run operating systems built for different architectures to run on different machines. QEMU relies on dynamic binary translation and has been ported to run on multiple platforms like ARM, PowerPC, i386 etc. Our first implementation used QEMU and attempts to address the initial design goal of evaluating the overhead of dynamic binary translation on a smartphone running an ARM processor. However, we found that the overhead due to dynamic binary translation is quite large without hardware assistance and explore other solutions for providing isolation. We present results from our experiments later in Section \ref{sec:ynotqemu}.
 
 %The following list presents the different techniques that we are considering to have a faster, more usable and secure solution.
 \subsection{KVM}
-The Kernel Virtual Machine Monitor (KVM) is a virtualization technique in which the Linux kernel plays the role of a hypervisor. In traditional virtualization tools like Xen \cite{xen}, a hypervisor manages the scheduling, memory management and driver support for the different guest operating systems. Since the linux kernel already performs most of these tasks for the host operating system, it is efficient to re-use this functionality for the guest operating systems too. KVM consists of a kernel module, which introduces a guest mode,  page tables and handles privileged instructions through a `trap-and-emulate' scheme. On the x86 architecture KVM uses hardware virtualization extensions like the Intel VT or AMD-V for the same. 
-The ARM architecture is not strictly virtualizable as there are privileged instructions which do not trap to the kernel and therefore a simple `trap-and-emulate' approach cannot be used. Hence more complex techniques like dynamic binary translation, translation to add software interrupts or paravirtualization are required for porting KVM to ARM. There have been some initial attempts to port KVM to ARM \cite{columbia} but the high performance overhead reported leads us to explore other solutions for isolation and security. 
+The Kernel Virtual Machine Monitor (KVM) is a virtualization technique in which the Linux kernel plays the role of a hypervisor. In traditional virtualization tools like Xen \cite{xen}, a hypervisor manages the scheduling, memory management and driver support for the different guest operating systems. Since the Linux kernel already performs most of these tasks for the host operating system, it is efficient to re-use this functionality for the guest operating systems too. KVM consists of a kernel module, which introduces a guest mode,  page tables and handles privileged instructions through a `trap-and-emulate' scheme. On the x86 architecture KVM uses hardware virtualization extensions like the Intel VT or AMD-V for the same. 
+The ARM architecture is not strictly virtualizable as there are privileged instructions which do not trap to the kernel and therefore a simple `trap-and-emulate' approach cannot be used. Hence more complex techniques like dynamic binary translation, translation to add software interrupts or paravirtualization are required for porting KVM to ARM. There have been some initial attempts to port KVM to ARM \cite{columbia} but the high performance overhead reported led us to explore other solutions for isolation and security. 
 
 \subsection{User Mode Linux}
 User Mode Linux (UML) is a virtualization technique in which the guest operating systems run as user mode processes inside the host. When compared to hypervisors like VMWare ESX or Xen, UML offers a simpler solution and is patched into the Linux kernel source tree. The first version of User Mode Linux used \emph{ptrace} to virtualize system calls and modify and divert them into the user space kernel for execution. Later versions of UML introduced the Separate Kernel Address Space (SKAS) mode  where the UML kernel runs in a different address space from its processes. This addresses security issues by making the UML kernel inaccessible to the UML processes and also provides a noticeable speedup. Also this technique is only effective when the architecture of the guest operating system is the same as the host and hence this fits the design constraints of our problem. User Mode Linux was built originally on the i386 architecture and has since been extended to the PowerPC and x86\_64 architectures. Technically it should be feasible to port UML to ARM architecture. \\
+
 Some downsides of using UML are that the amount of overhead is relatively large for workloads which have a number of interrupts and the project is not under active development anymore.
 
 \subsection{Why not QEMU}
-
-Given the above results, the only system we were able to evaluate as a solution was QEMU (since the other two were unavailable for our platform).  We evaluated the overhead of virtualization with a QEMU-based implementations running various distributions of Linux on both the Android and the Palm Pre, and the results as given in Table \ref{tab:virt_results}. The most successful implementation used ARM on ARM virtualization and a basic ARM kernel image provided along with QEMU. Unfortunately, even this implementation was far too slow, taking 52 seconds to boot on the Pre and 154 seconds to boot on the Android. Additionally response times were terrible, often taking several seconds to display text input. A Debian ARM Lenny image took over 15 minutes to boot on the Palm Pre and crashed on the Android during boot. x86 emulation on ARM was also tested, with a TTY-Linux image; however, this was the slowest by far, taking over half an hour to boot on the Palm Pre. On the Android, x86 guest mode QEMU would not even run. Overall these experiments suggest that binary translation is not usable and that we need to explore for different virtualization techniques listed in Section \ref{sec:design}.
+\label{sec:ynotqemu}
+Given the above results, the only system we were able to evaluate as a solution was QEMU (since the other two were unavailable for our platform).  We evaluated the overhead of virtualization with a QEMU-based implementations running various distributions of Linux on both the Android and the Palm Pre, and the results as given in Table \ref{tab:virt_results}. The most successful implementation used ARM on ARM virtualization and a basic ARM kernel image provided along with QEMU. Unfortunately, even this implementation was far too slow, taking 52 seconds to boot on the Pre and 154 seconds to boot on the Android. Additionally response times were high, often taking several seconds to display text input. A Debian ARM Lenny image took over 15 minutes to boot on the Palm Pre and crashed on the Android during boot. x86 emulation on ARM was also tested, with a TTY-Linux image; however, this was the slowest by far, taking over half an hour to boot on the Palm Pre. On the Android, x86 guest mode QEMU would not even run. Overall these experiments suggest that binary translation is not usable and so we explored different virtualization techniques.
 
 \begin{table*}[bth]
 \begin{tabular}{|l|c|c|}
@@ -28,7 +37,7 @@ Given the above results, the only system we were able to evaluate as a solution 
 \hline 
 \end{tabular}
 \caption{
-Virtualization Results: Kernel Boot time in seconds
+Virtualization Results: Kernel Boot time in seconds in QEMU
 }
 \label{tab:virt_results}
 \end{table*}
