--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -171,6 +171,7 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 }
 
 @misc{jni,
+  title = "{Java Native Interface}",
   howpublished = {\url{http://java.sun.com/j2se/1.4.2/docs/guide/jni/index.html}},
 }
 
