--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -11,9 +11,9 @@
 %Define one of these to see comments (or not)
 %\def\Comment#1{}
 \def\Comment#1{\noindent\textbf{\textsl{\large $\langle!\langle$#1$\rangle!\rangle$}}}
-\def\proj{Whazzle}
+\def\proj{MoZyg}
 
-\title{\proj : Secure Desktop Applications on Mobile Devices}
+\title{\proj : Secure Framework for Cross Platform Applications on Mobile Devices}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
 \{wdietz2, klarson5, venkata4\}@illinois.edu\\
 University of Illinois at Urbana Champaign}
