--- a/final-report/related.tex
+++ b/final-report/related.tex
@@ -2,7 +2,7 @@
 \label{sec:related}
 Currently, there are many solutions available for virtualization on desktop environments.  VMware is a popular closed source solution which implements a variety of virtualization techniques and is used in both industry and academia.  KVM \cite{kvm}, QEMU \cite{qemu}, and XEN \cite{xen} are all open source solutions, implemented using a variety of virtualization techniques.  These solutions cannot be directly used in mobile environments for performance and usability reasons. \\
 
-Recently there has been a surge of research in the area of mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Their work has several innovations, using ARM-specific hardware to assist in virtualization.  However, their numbers illustrate a noticable overhead above native execution and demonstrate only the latency overhead of their VMs, not the startup times or the overheads imposed.
+Recently there has been a surge of research in the area of mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Their work has several innovations, using ARM-specific hardware to assist in virtualization.  However, their numbers demonstrate a noticable overhead above native execution and demonstrate only the latency overhead of their VMs, not the startup times or the overheads imposed.\\
 
 There have been efforts to port Xen to the ARM hardware \cite{xen}.  It supports many operations, including secure booting and storage, access controls, booting of multiple OSes, and static memory partitioning.  Unfortunately, the project is still very immature and many Xen tools and features are absent and newer versions of ARM are unsupported.  Additionally, it seems little to no work has been done since 2008. \\
 
